<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/cardview_margin_horizon"
    android:layout_marginVertical="@dimen/cardview_margin_vertical"
    app:cardCornerRadius="@dimen/cardview_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/cardview_padding">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectOutputButton"
            android:text="@string/select_output_dir"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/processButton"
            android:text="@string/process_button"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/outputProgressBar"
            android:visibility="gone"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/outputLogTextView"
            android:text="@string/no_output_log"
            android:paddingTop="8dp"
            android:paddingHorizontal="@dimen/cardview_padding"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideOverlay"
            android:background="@android:color/transparent"
            android:textIsSelectable="true"
            android:gravity="top|start"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>