<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="@dimen/cardview_margin_horizon"
    android:layout_marginVertical="@dimen/cardview_margin_vertical"
    app:cardCornerRadius="@dimen/cardview_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="?android:dialogPreferredPadding">

        <ImageView
            android:id="@android:id/icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:importantForAccessibility="no"
            tools:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/about_text"/>

            <TextView
                android:id="@+id/source_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="?android:textColorSecondary"
                android:textSize="14sp"
                tools:text="@string/about_view_source_code" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>